@@ -1,8 +1,3 @@
-Now
-===
-
-* Deal with compiler warnings
-
 Soon
 ====
 
