@@ -1,0 +1,49 @@
+{
+  "pages": [
+    {
+      "contents": [
+        "4 0 R"
+      ],
+      "images": [
+        {
+          "bitspercomponent": 1,
+          "colorspace": "/DeviceGray",
+          "decodeparms": [
+            null
+          ],
+          "filter": [
+            "/FlateDecode"
+          ],
+          "filterable": true,
+          "height": 200,
+          "name": "/Im1",
+          "object": "6 0 R",
+          "width": 100
+        },
+        {
+          "bitspercomponent": 8,
+          "colorspace": "/XeviceGray",
+          "decodeparms": [
+            null
+          ],
+          "filter": [
+            "/FlateDecode"
+          ],
+          "filterable": true,
+          "height": 200,
+          "name": "/Im2",
+          "object": "7 0 R",
+          "width": 200
+        }
+      ],
+      "label": null,
+      "object": "3 0 R",
+      "outlines": [],
+      "pageposfrom1": 1
+    }
+  ],
+  "parameters": {
+    "decodelevel": "generalized"
+  },
+  "version": 1
+}
